cluster/apps/homeauto/home-assistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: home-assistant
    app.kubernetes.io/name: home-assistant
  name: home-assistant
  namespace: homeauto
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: home-assistant
      app.kubernetes.io/name: home-assistant
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: home-assistant
        app.kubernetes.io/name: home-assistant
    spec:
      containers:
        - env:
            - name: TZ
              value: America/Chicago
          image: homeassistant/home-assistant:2023.5.1
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 8123
            timeoutSeconds: 1
          name: home-assistant
          ports:
            - containerPort: 8123
              hostPort: 8123
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 8123
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 1000m
              memory: 1024Mi
            requests:
              cpu: 100m
              memory: 256Mi
          startupProbe:
            failureThreshold: 30
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 8123
            timeoutSeconds: 1
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          securityContext:
            privileged: true
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /dev/ttyUSB0
              name: usb
      hostNetwork: true
      restartPolicy: Always
      nodeSelector:
        hasHomeAssistantUSB: "true"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: nfs-config-homeassistant-claim
        - name: usb
          hostPath:
            path: /dev/ttyUSB0
            type: CharDevice
