cluster/apps/homeauto/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: home-assistant
    app.kubernetes.io/name: home-assistant
  name: home-assistant
  namespace: homeauto
spec:
  loadBalancerIP: "${HOMEASSISTANT_ADDRESS}"
  ports:
    - name: http
      port: 8123
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: home-assistant
    app.kubernetes.io/name: home-assistant
  type: LoadBalancer
