cluster/apps/homeauto/home-assistant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: prod-issuer
    cert-manager.io/issuer-group: cert-manager.k8s.cloudflare.com
    cert-manager.io/issuer-kind: OriginIssuer
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/hostname: "${SECRET_DOMAIN}"
    kubernetes.io/ingress.class: nginx
  labels:
    app.kubernetes.io/instance: home-assistant
    app.kubernetes.io/name: home-assistant
  name: home-assistant
  namespace: homeauto
spec:
  rules:
    - host: ha.${SECRET_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: home-assistant
                port:
                  number: 8123
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - ha.${SECRET_DOMAIN}
      secretName: homeassistant-prod-tls
